[package]
name = "ChainSauce_task1"
# name = "gnfd-cmd"
version = "0.1.0"
edition = "2021"
authors = ["Almas Serik", "Alibek Sarseitov", "Artyom Amayev", "Nursultan Ergaliev"]
description = "cmd tool for supporting making request to greenfield"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive", "cargo"] }
serde = {version = "1.0.144", features = ["derive"] }
anyhow = "1.0"
cosmos-sdk-proto = "0.19.0"
tonic = "0.9.2"
toml = "0.7.4"
hex = "0.4.3"
secp256k1 = "0.27.0"