[package]
name = "ChainSauce_task1"
# name = "gnfd-cmd-rust"
version = "0.1.0"
edition = "2021"
authors = ["Almas Serik", "Alibek Sarseitov", "Artyom Amayev", "Nursultan Ergaliev"]
description = "cmd tool for supporting making request to greenfield"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive", "cargo"] }
serde = {version = "1.0.144", features = ["derive"] }
cosmos-sdk-proto = "0.18.0"
tonic = "0.9.2"
toml = "0.7.4"
hex = "0.4.3"
secp256k1 = "0.27.0"
serde_json = "1.0.68"
reqwest = {version = "0.11.11", features = ["json"]}
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"
cosmrs = { version = "0.13.0", features = ["bip32", "cosmwasm"]}
env_logger = "0.10.0"
anyhow = "1.0.70"
prost = { version= "0.11.9" }
rand_core = "0.6.4"
tendermint-rpc = {version="0.31.1", features=["http-client"]}
prost-types = "0.11.9"
greenfield-sdk-proto = { git = "https://github.com/KRakenoZavr/greenfield-sdk-rust-v2", branch = "main" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
